# AndroidOpenCL

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kimentii/cameraresearch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: kernel.cl
app/src/main/c/: opencl-blur.c
app/src/main/cpp/: cl.h  cl_api.c  cl_api.h  cl_wrapper.c  cl_wrapper.h  cpu_filter.c  cpu_filter.h  filter.c  filter.h  kernel.cl  main.c  matrix.c  matrix.h  opencl-blur.cpp  ppm.c  ppm.h  time_measure.c  time_measure.h
app/src/main/java/com/kimentii/cameraresearch/: BlurFilteringSurface.java  GrayscaleFilteringSurface.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: kernel.cl
app/src/main/res/values/: strings.xml
app/src/test/java/com/kimentii/cameraresearch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
